--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,23 +1,15 @@
 <nav class="navbar navbar-expand-lg bg-danger navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Blood Donation</a>
+      <a class="navbar-brand" href="#">To do App</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/">Add Donor</a>
+            <a class="nav-link active" aria-current="page" routerLink="/">Todo List</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/search">Search Donor</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/delete">Delete Donor</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="/viewall">View all Donor</a>
-          </li>
+        
         
         </ul>
         <form class="d-flex" role="search">
