--- a/src/app/todolist/todolist.component.html
+++ b/src/app/todolist/todolist.component.html
@@ -19,8 +19,13 @@
                     
                     <td>{{i.id}}</td>
                     <td>{{i.title}}</td>
-                    <td>{{i.title}}</td>
-                   
+                    <td *ngIf="i.completed"><div class="alert alert-success" role="alert">
+                       Completed
+                      </div></td>
+                    <td *ngIf="! i.completed"><div class="alert alert-danger" role="alert">
+                        Not Completed
+                      </div></td>
+
                   </tr>
                  
                 </tbody>
